slightly improved bug show and new pages: more spacing to headers and wrapped it in a container

--- a/app/assets/stylesheets/bugs.scss
+++ b/app/assets/stylesheets/bugs.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the bugs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
